...

    var body: some View {
        GeometryReader { bodyView in
            Color.black.edgesIgnoringSafeArea(.all)
            ZStack() {
                PlayerView(appManager: appManager, status: $playerStatus0)
                    .accessibility(identifier: "VideoView_PlayerView0")
                    .offset(x:offset_x, y:offset_y)
                    .opacity(opacity0)
                PlayerView(appManager: appManager, status: $playerStatus1)
                    .accessibility(identifier: "VideoView_PlayerView1")
                    .offset(x:offset_x, y:offset_y)
                    .opacity(opacity1)
            }
            .onTapGesture {
                appManager.togglePauseAndRestartPlay()
            }
...
