...
                            Text(String(album.videos.count)).foregroundColor(Color.secondary)
                                .accessibility(identifier: "\(baseIdentifier)_count")
                        }
                    }
                }
            }
            .accessibility(identifier: "ContentView_List")
            .navigationBarTitle(appManager.navigationTitle, displayMode: .inline)
            .navigationBarItems(trailing: Button(
                action: {
                    self.showingSettingsModal.toggle()
                }) {
                    Image(systemName: "gearshape.fill")
...
